# QtUI

./: .gitignore
QTui/: CMakeLists.txt  MainWidget.cpp  MainWidget.hpp  main.cpp
QTui.xcodeproj/: project.pbxproj
QTui.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
QTui.xcodeproj/xcuserdata/thecoxs.xcuserdatad/xcschemes/: xcschememanagement.plist
